<resources>
    <string name="app_name">ExamList</string>
    <string name="name">name</string>
    <string name="check_msg">checke</string>
    <string name="entername">enter name</string>
    <string name="add">add</string>
    <string name="area">area</string>
    <string name="enter_area">enter area</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="imgname">imgname</string>
    <string-array name="fruits">
        <item>apple</item>
        <item>banana</item>
        <item>blueberry</item>
        <item>strawberry</item>
        <item>grape</item>
        <item>shine muscat</item>
    </string-array>
</resources>