<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/nameTXT"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="itemClick"
        android:text="@string/name" />

    <TextView
        android:id="@+id/phoneTXT"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="itemClick"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/addressTXT"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:onClick="itemClick"
        android:text="@string/address" />

    <ImageView
        android:id="@+id/iconIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgname"
        android:maxWidth="25dp"
        android:maxHeight="25dp"
        android:onClick="itemClick"
        app:srcCompat="@drawable/ic_launcher_background" />
</LinearLayout>